--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.5.0",
     "ng2-currency-mask": "^5.3.1",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.3.3",
